--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jest-app",
+  "name": "tic-tac-toe-game-app",
   "version": "1.0.0",
   "description": "",
   "source": "src/index.html",
@@ -12,7 +12,6 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.34.3",
-    "jest": "^29.5.0",
     "parcel": "^2.8.3",
     "vitest": "^0.31.1"
   }
