--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "source": "src/index.html",
   "scripts": {
     "test": "vitest",
-    "start": "parcel src/index.html"
+    "start": "parcel",
+    "build": "parcel build"
   },
   "keywords": [],
   "author": "",
