--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -21,3 +21,7 @@ jobs:
           node-version: 16
       - run: npm ci
       - run: npm test
+      - run: npm i
+      - run: npm run test
+      - run: npm start
+      - run: npx playwright test
