--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -23,5 +23,5 @@ jobs:
       - run: npm test
       - run: npm i
       - run: npm run test
-      - run: npm start
       - run: npx playwright test
+      - run: npm run build
