--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -1,7 +1,7 @@
 # This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
 # For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
 
-name: Node.js Package
+name: Node.js Package Install Test Build
 
 on:
   release:
@@ -12,7 +12,7 @@ on:
     branches: [main]
 
 jobs:
-  build:
+  install:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -22,4 +22,24 @@ jobs:
       - run: npm ci
       - run: npm test
       - run: npm i
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
+
+  test:
+    timeout-minutes: 60
+    runs-on: ubuntu-latest
+    steps:
       - run: npm run test
+      - name: Run Playwright tests
+        run: npx playwright test
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
+
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - run: npm run build
