--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -28,6 +28,7 @@ jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
+    needs: install
     steps:
       - run: npm run test
       - name: Run Playwright tests
@@ -41,5 +42,6 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    needs: install
     steps:
       - run: npm run build
