--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -22,15 +22,15 @@ jobs:
       - run: npm ci
       - run: npm test
       - run: npm i
-      - name: Install Playwright Browsers
-        run: npx playwright install --with-deps
+      - run: npm run test
 
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     needs: install
     steps:
-      - run: npm run test
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
       - name: Run Playwright tests
         run: npx playwright test
       - uses: actions/upload-artifact@v3
@@ -42,6 +42,13 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: install
+    needs: test
     steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+      - run: npm ci
+      - run: npm test
+      - run: npm i
       - run: npm run build
