--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -27,6 +27,7 @@ jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
+    needs: install
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
