--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -19,22 +19,12 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-      - run: npm ci
+      - name: Install Dependencies
+        run: npm ci
       - run: npm test
       - run: npm i
-      - run: npm run test
-
-  test:
-    timeout-minutes: 60
-    runs-on: ubuntu-latest
-    needs: install
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16
-      - name: Install dependencies
-        run: npm ci
+      - name: Run Unit Test
+        run: npm run test
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
       - name: Run Playwright tests
@@ -45,16 +35,5 @@ jobs:
           name: playwright-report
           path: playwright-report/
           retention-days: 30
-
-  build:
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16
-      - run: npm ci
-      - run: npm test
-      - run: npm i
-      - run: npm run build
+      - name: Create Production Build
+        run: npm run build
