--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -19,8 +19,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-      - name: Install Dependencies
-        run: npm ci
+      - run: npm ci
       - run: npm test
       - run: npm i
       - name: Run Unit Test
