--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.34.3",
+    "gh-pages": "^5.0.0",
     "parcel": "^2.8.3",
     "vitest": "^0.31.1"
   }
